--- a/users/templates/users/landingpage.html
+++ b/users/templates/users/landingpage.html
@@ -58,8 +58,8 @@
 
         <section id="about" class="about-section">
             <div class="section-header fade-in">
-                <h2>About <span class="highlight">Us</span></h2>
-                <p>Helping you ace both technical and behavioral interviews</p>
+                <h2><span class="highlight">About Us</span></h2>
+                <p style="color: #fff;">Helping you ace both technical and behavioral interviews</p>
             </div>
             <div class="about-content">
                 <div class="about-text slide-in-right">
